# learn_pbd

./: .gitignore  CMakeLists.txt  README.md  utils.h  xpbd_ball.cpp  xpbd_cloth.cpp  xpbd_collision.cpp  xpbd_soft.cpp  xpbd_spring.cpp
data/: GOLF.ele  GOLF.face  GOLF.node  GOLF.smesh  GOLF.stl.1.ele  GOLF.stl.1.face  GOLF.stl.1.node  GOLF.stl.1.smesh  PolyCup.1.ele  PolyCup.1.face  PolyCup.1.node  PolyCup.1.smesh
lib/: freeglut_static.lib  freeglut_staticd.lib
shader/: basic.frag  basic.vert
